--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,11 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
     qt_add_executable(VideoCardControl
         MANUAL_FINALIZATION
         ${PROJECT_SOURCES}
+        cardinfo.h cardinfo.cpp cardinfo.ui
+
+
+
+
     )
 # Define target properties for Android with Qt 6 as:
 #    set_property(TARGET VideoCardControl APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
