--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,8 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         MANUAL_FINALIZATION
         ${PROJECT_SOURCES}
         cardinfo.h cardinfo.cpp cardinfo.ui
+        videocardcollector.h videocardcollector.cpp
+        graphwindow.h graphwindow.cpp graphwindow.ui
 
 
 
