--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,6 +30,7 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         cardlogger.h cardlogger.cpp cardlogger.ui
         databasecollector.h databasecollector.cpp
         linkingwindow.h linkingwindow.cpp linkingwindow.ui
+        profilemanager.h profilemanager.cpp profilemanager.ui
 
 
 
